--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -42,17 +42,16 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip Release
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
-          path: ./build/*
+          path: ./out
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
