--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -47,7 +47,10 @@ jobs:
           npm install
           npm run build --if-present
 
-      - name: Zip Release
+      - name: Verify export output
+        run: ls -la ./out
+
+      - name: Zip static export folder
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
