--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -51,7 +51,7 @@ jobs:
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
-          path: ./out
+          path: .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -80,4 +80,4 @@ jobs:
         with:
           app-name: "asamijonsson"
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./out
+          package: release.zip
