--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -23,12 +23,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: your-app-name # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: "." # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: "18.x" # set this to the node version to use
-
-permissions:
-  contents: read
+  AZURE_WEBAPP_NAME: asamijonsson
+  NODE_VERSION: "18.x"
 
 jobs:
   build:
@@ -42,10 +38,13 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
-      - name: npm install, build
+      - name: Install dependencies and build
         run: |
           npm install
-          npm run build --if-present
+          npm run build
+
+      - name: Verify out directory exists
+        run: ls -la ./out
 
       - name: Zip static export folder
         uses: TheDoctor0/zip-release@0.6.1
@@ -53,31 +52,26 @@ jobs:
           filename: release.zip
           path: ./out
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: release.zip
 
   deploy:
-    permissions:
-      contents: none
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: "Development"
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+      name: Development
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: "Deploy to Azure WebApp"
-        id: deploy-to-webapp
+      - name: Deploy to Azure WebApp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "asamijonsson"
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: release.zip
