--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -23,8 +23,12 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: asamijonsson
-  NODE_VERSION: "18.x"
+  AZURE_WEBAPP_NAME: your-app-name # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: "." # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: "18.x" # set this to the node version to use
+
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -38,13 +42,10 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
-      - name: Install dependencies and build
+      - name: npm install, build
         run: |
           npm install
-          npm run build
-
-      - name: Verify out directory exists
-        run: ls -la ./out
+          npm run build --if-present
 
       - name: Zip static export folder
         uses: TheDoctor0/zip-release@0.6.1
@@ -52,26 +53,31 @@ jobs:
           filename: release.zip
           path: ./out
 
-      - name: Upload artifact for deployment
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: release.zip
 
   deploy:
+    permissions:
+      contents: none
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: Development
+      name: "Development"
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: Deploy to Azure WebApp
+      - name: "Deploy to Azure WebApp"
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          app-name: "asamijonsson"
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: release.zip
