--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -47,7 +47,7 @@ jobs:
           npm install
           npm run build --if-present
 
-      - name: Zip static export folder
+      - name: Zip Release
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
