--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -26,9 +26,9 @@ env:
   AZURE_WEBAPP_NAME: your-app-name # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: "." # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: "18.x" # set this to the node version to use
-  DATABASE_ID: ${{ secrets.DATABASE_ID }}
-  COLLECTION_ID: ${{ secrets.COLLECTION_ID }}
-  PROJECT_ID: ${{ secrets.PROJECT_ID }}
+  NEXT_PUBLIC_APPWRITE_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_APPWRITE_PROJECT_ID }}
+  NEXT_PUBLIC_APPWRITE_DATABASE_ID: ${{ secrets.NEXT_PUBLIC_APPWRITE_DATABASE_ID }}
+  NEXT_PUBLIC_APPWRITE_COLLECTION_ID: ${{ secrets.NEXT_PUBLIC_APPWRITE_COLLECTION_ID}}
 
 jobs:
   build:
