create interface for todo

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.21.0",
     "appwrite": "^18.1.1",
     "gsap": "^3.13.0",
     "next": "15.3.3",
