--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -51,7 +51,11 @@ jobs:
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
-          path: .
+          path: |
+            .next
+            package.json
+            node_modules
+            public
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
