--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -47,20 +47,14 @@ jobs:
           npm install
           npm run build --if-present
 
-      - name: Zip Release
-        uses: TheDoctor0/zip-release@0.6.1
-        with:
-          filename: release.zip
-          path: |
-            .next
-            package.json
-            node_modules
-            public
+      - name: Zip the build output
+        run: |
+          zip -r release.zip .next package.json public
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+      - name: Upload release.zip
+        uses: actions/upload-artifact@v3
         with:
-          name: node-app
+          name: release-zip
           path: release.zip
 
   deploy:
