--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -45,7 +45,7 @@ jobs:
       - name: npm install, build
         run: |
           npm install
-          npm run build --if-present
+          npm run build
 
       - name: Zip the build output
         run: |
