--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -57,9 +57,7 @@ jobs:
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
-          path: |
-            .next
-            public
+          path: .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
